jss-compiler/tests/lexer/invalid/invalid_identifier.jss
let int 123abc = 1;
